feat: [HU002] add role enum